# ontrak-ds-deferio

./: .gitignore  Data Scientist Technical Excercise.xlsx  ds-deferio-result-class.py  ds-deferio-result.py  ds-deferio-result.txt  ds-explore.ipynb  ontrak_ds_deferio_20210103.csv  ontrak_ds_deferio_20210103.xlsx  ontrak_ds_deferio_result.csv  pyproject.toml  test_data.csv
tests/: test_ontrak_ds_deferio.py
